--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,9 @@
     "test": "cross-env NODE_ENV=test jest --coverage",
     "test:watch": "cross-env NODE_ENV=test jest --watchAll",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "prettify": "prettier --write"
+    "prettify": "prettier --write",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "browserslist": [
     "last 2 versions",
@@ -60,9 +62,11 @@
     ]
   },
   "pre-commit": "lint:staged",
+
   "resolutions": {
-    "babel-core": "7.0.0-bridge.0"
-  },
+        "@babel/core": "7.13.15",
+        "@babel/preset-env": "7.13.15"
+       },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
     "chalk": "^2.4.2",
@@ -103,6 +107,10 @@
     "@babel/preset-env": "7.4.3",
     "@babel/preset-react": "7.0.0",
     "@babel/register": "7.4.0",
+    "@storybook/addon-actions": "^6.3.7",
+    "@storybook/addon-essentials": "^6.3.7",
+    "@storybook/addon-links": "^6.3.7",
+    "@storybook/react": "^6.3.7",
     "add-asset-html-webpack-plugin": "3.1.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "10.0.1",
