--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,19 +62,23 @@
     ]
   },
   "pre-commit": "lint:staged",
-
   "resolutions": {
-        "@babel/core": "7.13.15",
-        "@babel/preset-env": "7.13.15"
-       },
+    "@babel/core": "7.13.15",
+    "@babel/preset-env": "7.13.15"
+  },
   "dependencies": {
     "@babel/polyfill": "7.4.3",
+    "@chakra-ui/react": "^1.6.6",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@hookform/resolvers": "^2.7.1",
     "chalk": "^2.4.2",
     "compression": "1.7.4",
     "connected-react-router": "6.4.0",
     "cross-env": "5.2.0",
     "express": "4.16.4",
     "fontfaceobserver": "2.1.0",
+    "framer-motion": "^4",
     "history": "4.9.0",
     "hoist-non-react-statics": "3.3.0",
     "immer": "3.0.0",
@@ -87,6 +91,7 @@
     "react": "16.8.6",
     "react-dom": "16.8.6",
     "react-helmet": "6.0.0-beta",
+    "react-hook-form": "^7.12.2",
     "react-intl": "2.8.0",
     "react-redux": "7.0.2",
     "react-router-dom": "5.0.0",
@@ -94,7 +99,8 @@
     "redux-saga": "1.0.2",
     "reselect": "4.0.0",
     "sanitize.css": "8.0.0",
-    "styled-components": "4.2.0"
+    "styled-components": "4.2.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@babel/cli": "7.4.3",
